--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="style.css">
+    <link href="style.css" rel="stylesheet">
     <title>course info card design</title> 
     <title> Course Card Design |Course Card Template Design |Course Card Website Design | Responsive Course Card Design | Course Info Flex Card Design</title>    
     <meta name="description" content="The course info card design is developed by html, css coding used to develop it and fully responsive design with flex concept used in the card design model for develop or create the template, website or design quickly and more user friendly for the developer or designer to easy customize the designs." />
